SERVER-53723 Prevent failpoint from mistakenly acquiring db_raii helper during getMore on agg cursor