src/mongo/db/commands/getmore_cmd.cpp
@@ -487,7 +487,12 @@ public:
             // repeatedly release and re-acquire the collection readLock at regular intervals until
             // the failpoint is released. This is done in order to avoid deadlocks caused by the
             // pinned-cursor failpoints in this file (see SERVER-21997).
-            std::function<void()> dropAndReacquireReadLock = [&readLock, opCtx, this]() {
+            std::function<void()> dropAndReacquireReadLockIfLocked = [&readLock, opCtx, this]() {
+                if (!readLock) {
+                    // This function is a no-op if 'readLock' is not held in the first place.
+                    return;
+                }
+
                 // Make sure an interrupted operation does not prevent us from reacquiring the lock.
                 UninterruptibleLockGuard noInterrupt(opCtx->lockState());
                 readLock.reset();
@@ -498,7 +503,7 @@ public:
                     &waitAfterPinningCursorBeforeGetMoreBatch,
                     opCtx,
                     "waitAfterPinningCursorBeforeGetMoreBatch",
-                    dropAndReacquireReadLock,
+                    dropAndReacquireReadLockIfLocked,
                     _request.nss);
             }
 
@@ -590,9 +595,9 @@ public:
             // of this operation's CurOp to signal that we've hit this point and then spin until the
             // failpoint is released.
             std::function<void()> saveAndRestoreStateWithReadLockReacquisition =
-                [exec, dropAndReacquireReadLock, &readLock]() {
+                [exec, dropAndReacquireReadLockIfLocked, &readLock]() {
                     exec->saveState();
-                    dropAndReacquireReadLock();
+                    dropAndReacquireReadLockIfLocked();
                     exec->restoreState(&readLock->getCollection());
                 };
 
